# expirationtrackerweb

./: .gitignore  .python-version  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
core/: forms.py  models.py  views.py
core/migrations/: 0001_initial.py  0002_product_date_purchased.py  0003_auto_20220829_1632.py  0004_auto_20220902_0958.py  0005_auto_20220902_1031.py  0006_auto_20220917_1626.py  0007_auto_20230206_1754.py  0008_auto_20230310_2016.py  0009_auto_20230310_2049.py  0010_auto_20230310_2056.py  0011_auto_20230310_2100.py  0012_auto_20230311_1620.py  0013_auto_20230311_1623.py
core/static/css/: main.css
demo/: settings.py  urls.py
templates/: base.html  dropdown.html  extra  home.html  update_product.html
templates/core/: product_confirm_delete.html  product_form.html  product_list.html  product_update_form.html
templates/registration/: login.html  register.html
